// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Grid renders columns with offset 1`] = `
.c0 {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  flex: 0 0 8.3333%;
  padding-right: 1.5rem;
}

.c3 {
  flex: 0 0 8.3333%;
  margin-left: 83.3333%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c3 c2"
  >
    Column 2
  </div>
</div>
`;

exports[`Grid renders columns with span 1`] = `
.c0 {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  flex: 0 0 33.3333%;
  padding-right: 1.5rem;
}

.c3 {
  flex: 0 0 66.6667%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c3 c2"
  >
    Column 2
  </div>
</div>
`;

exports[`Grid renders without props 1`] = `
.c0 {
  display: flex;
  flex-wrap: wrap;
  margin-right: -1.5rem;
}

.c1 {
  flex: 0 0 8.3333%;
  padding-right: 1.5rem;
}

.c2 {
  box-sizing: border-box;
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1 c2"
  >
    Column 1
  </div>
  <div
    class="c1 c2"
  >
    Column 2
  </div>
  <div
    class="c1 c2"
  >
    Column 3
  </div>
</div>
`;
